# evetech

./: .env  .gitignore  Cargo.toml  Dockerfile  deploy.sh  diesel.toml  docker_build.sh  start.sh  stop.sh  watchdog.sh
migrations/2024-08-29-112620_create_killmails/: down.sql  up.sql
public/css/: style.css
public/js/: draft.js  script.js
public/templates/: alliance.html  character.html  corporation.html  draft.html  lost_ship.html  report.html  who.html
scripts/: update_backward.sh  update_by_date.sh
src/: lib.rs  schema.rs
src/alliance/: alliance.rs  mod.rs
src/apps/: mod.rs  route.rs  waypoint.rs
src/character/: character.rs  mod.rs
src/common/: mod.rs  names.rs  position.rs  search_result.rs  status.rs  vector.rs
src/corporation/: corporation.rs  mod.rs
src/esi/: api.rs  client.rs  mod.rs
src/killmails/: attacker.rs  item.rs  killamail.rs  killmail.rs  mod.rs  victim.rs
src/market/: group.rs  mod.rs  orders.rs
src/models/: api.rs  attacker.rs  killmail.rs  mod.rs  victim.rs
src/openapi/: mod.rs
src/universe/: belt.rs  category.rs  constellation.rs  group.rs  item.rs  mod.rs  moon.rs  planet.rs  region.rs  star.rs  stargate.rs  station.rs  system.rs  utils.rs
