[package]
name = "evetech"
version = "0.2.5"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1" }
tokio = { version = "1", features = ["full"] }
docopt = "1.1"
septem = "1.1"
itertools = "0.13"
diesel = { version = "2.2.4", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
chrono = "*"
actix-rt = { version = "2.10", default-features = false }
actix-web = { version = "4.9" }
actix-files = "0.6"
actix-cors = "0.7.0"
websockets = "0.3.0"
handlebars = { version = "6", features = ["dir_source"] }

[dev-dependencies]
approx = "0.5"
diesel_migrations = "2.0"
